<?xml version="1.0"?>
<package format="2">
  <name>waypoint_saver</name>
  <version>0.0.0</version>
  <description>waypoint_saver ROS</description>

  <author email="eugenio.cuniato@ethz.ch">Eugenio Cuniato</author>
  <maintainer email="eugenio.cuniato@ethz.ch">Eugenio Cuniato</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen_catkin</depend>
  <depend>roslib</depend>
</package>
